--- a/project.owasp.yaml
+++ b/project.owasp.yaml
@@ -17,8 +17,7 @@ repositories:
     description: OWASP Foundation Web Repository
   - name: owasp-java-encoder
     url: https://github.com/OWASP/owasp-java-encoder
-    description: The OWASP Java Encoder is a Java 1.5+ simple-to-use drop-in high-performance encoder class with no dependencies and little baggage. This
-      project will help Java web developers defend against Cross Site Scripting!
+    description: The OWASP Java Encoder is a Java 1.5+ simple-to-use drop-in high-performance encoder class with no dependencies and little baggage. This project will help Java web developers defend against Cross Site Scripting!
 tags:
   - java-encoder-tag
   - custom-tag-1
